--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -16,8 +16,8 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-# Build the Go app
-RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o main .
+# Build the Go app with the new project structure
+RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o web-app-caa ./cmd/web-app-caa
 
 # Final stage
 FROM alpine:latest
@@ -28,12 +28,11 @@ RUN apk --no-cache add ca-certificates sqlite
 WORKDIR /root/
 
 # Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/main .
+COPY --from=builder /app/web-app-caa .
 
-# Copy static files, templates, and other necessary files
-COPY --from=builder /app/static ./static
-COPY --from=builder /app/templates ./templates
-COPY --from=builder /app/prompts ./prompts
+# Copy static files, templates, and other necessary files with new structure
+COPY --from=builder /app/web ./web
+COPY --from=builder /app/internal/prompts ./internal/prompts
 COPY --from=builder /app/data ./data
 COPY --from=builder /app/rag_knowledge.json ./rag_knowledge.json
 
@@ -44,4 +43,4 @@ RUN mkdir -p ./data && chmod 755 ./data
 EXPOSE 3000
 
 # Command to run the executable
-CMD ["./main"]
+CMD ["./web-app-caa"]
