--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -55,6 +55,7 @@ jobs:
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          no-cache: false
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
