--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -16,8 +16,8 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-# Build the Go app with the new project structure
-RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o web-app-caa ./cmd/web-app-caa
+# Build the Go app with the new project structure - output to bin directory
+RUN CGO_ENABLED=1 GOOS=linux go build -a -installsuffix cgo -o bin/web-app-caa ./cmd/web-app-CAA
 
 # Final stage
 FROM alpine:latest
@@ -28,15 +28,14 @@ RUN apk --no-cache add ca-certificates sqlite
 WORKDIR /root/
 
 # Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/web-app-caa .
+COPY --from=builder /app/bin/web-app-caa .
 
 # Copy static files, templates, and other necessary files with new structure
 COPY --from=builder /app/web ./web
 COPY --from=builder /app/internal/prompts ./internal/prompts
-COPY --from=builder /app/data ./data
 COPY --from=builder /app/rag_knowledge.json ./rag_knowledge.json
 
-# Create data directory with proper permissions if it doesn't exist
+# Create data directory with proper permissions (application will create database files here)
 RUN mkdir -p ./data && chmod 755 ./data
 
 # Expose port 3000 to the outside world
