trusted proxies as env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_HOST=0.0.0.0
 APP_PORT=3000
 JWT_SECRET=xxxxxxxxxxxxxxxxxxxx
 
+# Trusted proxies for reverse proxy setups (comma-separated)
+# Default: 127.0.0.1,::1 (localhost IPv4 and IPv6)
+TRUSTED_PROXIES=127.0.0.1,::1
+
 # Database Configuration
 # Supported drivers: sqlite, mysql
 DB_DRIVER=sqlite
