implemented jwt auth initial version and updated docs

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 # Frontend & Server Configuration
-PUBLIC_URL=http://localhost:3000
+PUBLIC_URL=http://localhost:6542
 APP_HOST=0.0.0.0
-APP_PORT=3000
+APP_PORT=6542
+
+# JWT Configuration
 JWT_SECRET=xxxxxxxxxxxxxxxxxxxx
+# Alternative JWT secret key (for the new JWT implementation)
+API_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT token lifespan in hours
+TOKEN_HOUR_LIFESPAN=24
 
 # Trusted proxies for reverse proxy setups (comma-separated)
 # Default: 127.0.0.1,::1 (localhost IPv4 and IPv6)
