mapped backend correct endpont names

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=http://localhost:3000
-# VITE_APP_TITLE=Web App CAA
+VITE_API_BASE_URL=http://localhost:6542
+VITE_APP_TITLE=Web App CAA
