--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,21 +13,23 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-query": "5.85.5",
+    "@types/uuid": "^10.0.0",
+    "axios": "1.11.0",
+    "clsx": "2.1.1",
+    "framer-motion": "12.23.12",
+    "lucide-react": "0.542.0",
     "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-router-dom": "7.8.2",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "7.62.0",
-    "@tanstack/react-query": "5.85.5",
-    "axios": "1.11.0",
-    "zustand": "5.0.8",
-    "framer-motion": "12.23.12",
     "react-hot-toast": "2.6.0",
     "react-modal": "3.16.3",
-    "lucide-react": "0.542.0",
-    "clsx": "2.1.1",
-    "tailwind-merge": "3.3.1"
+    "react-router-dom": "7.8.2",
+    "tailwind-merge": "3.3.1",
+    "uuid": "^11.1.0",
+    "zustand": "5.0.8"
   },
   "devDependencies": {
     "@types/react": "19.1.11",
