--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,64 @@ LLM_MODEL=your-openwebui-model
 # BACKEND_TYPE=ollama
 # LLM_HOST=http://ollama-host:11434
 # LLM_MODEL=llama3.1:8b
+
+# S3 Configuration for RAG Knowledge Management
+# Set S3_ENABLED=true to enable S3 storage for rag_knowledge.json
+
+# Enable/disable S3 storage
+S3_ENABLED=false
+
+# AWS S3 Configuration
+S3_REGION=us-east-1
+S3_BUCKET_NAME=your-caa-bucket
+S3_ACCESS_KEY_ID=your-access-key
+S3_SECRET_ACCESS_KEY=your-secret-key
+
+# Optional: Custom S3 endpoint (for LocalStack, RustFS, etc.)
+S3_ENDPOINT=
+
+# Optional: Key prefix for organization (default: "caa")
+S3_KEY_PREFIX=caa
+
+# Optional: Force path style (needed for some S3-compatible services like LocalStack)
+S3_FORCE_PATH_STYLE=true
+
+# Example for LocalStack (local S3 development):
+# S3_ENABLED=true
+# S3_REGION=us-east-1
+# S3_BUCKET_NAME=caa-bucket
+# S3_ACCESS_KEY_ID=test
+# S3_SECRET_ACCESS_KEY=test
+# S3_ENDPOINT=http://localhost:4566
+# S3_KEY_PREFIX=dev
+# S3_FORCE_PATH_STYLE=true
+
+# Example for AWS S3:
+# S3_ENABLED=true
+# S3_REGION=us-west-2
+# S3_BUCKET_NAME=my-company-caa-bucket
+# S3_ACCESS_KEY_ID=AKIA...
+# S3_SECRET_ACCESS_KEY=xxxxx...
+# S3_KEY_PREFIX=prod
+# S3_FORCE_PATH_STYLE=false
+
+# ===========================================
+# DOCKER DEPLOYMENT CONFIGURATION
+# ===========================================
+
+# Docker Compose profiles for optional services
+# Comma-separated list: mysql,ollama,rustfs
+COMPOSE_PROFILES=
+
+# Port configuration for Docker services
+MYSQL_PORT=3306
+OLLAMA_PORT=11434
+RUSTFS_API_PORT=9000
+RUSTFS_CONSOLE_PORT=9001
+
+# MySQL Docker container configuration
+DB_ROOT_PASSWORD=secure_root_password_change_me
+
+# RustFS Docker container configuration
+RUSTFS_ACCESS_KEY=admin
+RUSTFS_SECRET_KEY=secure_rustfs_secret_change_me
